📖 つづく ─ 名前も知らないやさしい君へ — auto generated

--- a/index.html
+++ b/index.html
@@ -347,6 +347,10 @@
         <h2 class="chapter-title">雨の日のこと</h2>
       </div>
       
+        <div class="chapter-image">
+          <img src="images/chapter_01.png" alt="第1章 挿絵"
+               loading="lazy" />
+        </div>
       <div class="chapter-body">
         <p>雨粒が路面の色を濃い灰色に染めていく。歩道橋から降りてくる人々、誰も振り返らない。傘たちが蠢き、黒い影を投げ出す。「まだ歌っているんだ」という声は聞こえない。</p>
 
